# zero-aligner

./: README.md  zero-aligner.cabal
app/: Main.hs
src/: Worker.hs
src/Sequence/: Alignment.hs
src/Sequence/Alignment/: Instances.hs  Matrix.hs  Type.hs
src/Sequence/Alignment/Matrix/: Scoring.hs  Template.hs
test/: Spec.hs
