name:                zero-aligner
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/zmactep/zero-aligner#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Yakovlev
maintainer:          pavel@yakovlev.me
copyright:           Copyright: (c) 2016 Pavel Yakovlev
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Worker
                     , Sequence.Alignment
                     , Sequence.Alignment.Matrix
  other-modules:       Sequence.Alignment.Type
                     , Sequence.Alignment.Instances
                     , Sequence.Alignment.Matrix.Scoring
                     , Sequence.Alignment.Matrix.Template
  build-depends:       base >= 4.7 && < 5
                     , zeromq4-haskell
                     , data-default
                     , bytestring
                     , array
                     , containers
                     , text
                     , template-haskell
  default-language:    Haskell2010

executable zero-aligner-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zero-aligner
  default-language:    Haskell2010

test-suite zero-aligner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zero-aligner
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmactep/zero-aligner
